objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account_Setup_Fee_Per_Location__c</fullName>
        <label>Account Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Setup_of_Locations__c</fullName>
        <label>Account Setup # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adversite_Setup_Fee_Per_Location__c</fullName>
        <label>Adversite Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adversite_Setup_of_Locations__c</fullName>
        <label>Adversite Setup # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <label>Auto-Renewal</label>
        
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_Lite_Fee_Per_Location__c</fullName>
        <label>CM Lite Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Lite_of_Locations__c</fullName>
        <label>CM Lite # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centermark_Fee_Per_Location__c</fullName>
        <label>Centermark Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Centermark_Setup_Fee_Per_Location__c</fullName>
        <label>Centermark Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Centermark_of_Locations__c</fullName>
        <label>Centermark # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centermark_of_Locations_to_Setup__c</fullName>
        <label>Centermark # of Locations to Setup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Creation_and_Installation_Fee_Pa__c</fullName>
        <label>Content Creation and Installation Fee/Pa</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Oppty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract-Oppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <description>Setup for Biz Dev RecordType</description>
        <inlineHelpText>Value of the Contract</inlineHelpText>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Site_Contract_Length__c</fullName>
        <label>Corporate Site Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Site_Monthly_Fee__c</fullName>
        <label>Corporate Site Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Website_Design_Build__c</fullName>
        <label>Corporate Website Design &amp; Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_vs_Individual__c</fullName>
        <label>Corporate vs Individual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Paid</fullName>
                </value>
                <value>
                    <fullName>Individual Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Main_Contact_Email__c</fullName>
        <label>Customer Main Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Main_Contact_Phone__c</fullName>
        <label>Customer Main Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Main_Contact__c</fullName>
        <description>Main contact at relationship signing the contract</description>
        <label>Customer Main Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Contract_Length__c</fullName>
        <label>Display Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Creative_Fee__c</fullName>
        <label>Display Creative Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Monthly_Budget__c</fullName>
        <label>Display Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>What type of Agreement is this? YSA / Preferred Vendor Agreement</description>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Termination_Description__c</fullName>
        <label>Early Termination Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Early_Termination__c</fullName>
        <label>Early Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Contract_Length__c</fullName>
        <label>Email Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Fee_Per_Location__c</fullName>
        <label>Email Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_of_Locations__c</fullName>
        <label>Email # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_to_Customer__c</fullName>
        <label>Fees to Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foundations_Fee_Per_Location_over_100__c</fullName>
        <label>Foundations Fee Per Location over 100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foundations_Fee_Per_Location_up_to_100__c</fullName>
        <label>Foundations Fee Per Location up to 100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Included_Services_Description__c</fullName>
        <label>Included Services Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Included_Services__c</fullName>
        <label>Included Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Business_Owner__c</fullName>
        <description>Web.com Internal Business Owner - Contract - internal person who owns the account/manages relationship</description>
        <inlineHelpText>Internal person who owns the account/manages relationship - Please Enter Name and Phone Number</inlineHelpText>
        <label>Internal Business Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maps_Optimization_Fee_Per_Location__c</fullName>
        <label>Maps Optimization Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maps_Optimization_of_Locations__c</fullName>
        <label>Maps Optimization # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Mgmt_Fee_Per_Location__c</fullName>
        <label>Media Mgmt Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Mgmt_of_Locations__c</fullName>
        <label>Media Mgmt # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Compete__c</fullName>
        <label>Non-Compete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_SLA__c</fullName>
        <label>Onboarding SLA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Time_Shared_Landing_Page_Web_Dev_F__c</fullName>
        <label>One-Time Shared Landing Page &amp; Web Dev</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>.</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organic_Fee_Per_Location__c</fullName>
        <label>Organic Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organic_Setup_Fee_per_Location__c</fullName>
        <label>Organic Setup Fee per Location</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organic_Setup_of_Location__c</fullName>
        <label>Organic Setup # of Location</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_of_Locations__c</fullName>
        <label>Organic # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_Contract_Length__c</fullName>
        <label>PPC Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_Montly_Budget__c</fullName>
        <label>PPC Montly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC_Product_Margin__c</fullName>
        <description>PPC Product Margin for Corporate Relationship</description>
        <inlineHelpText>PPC Product Margin for Corporate Relationship</inlineHelpText>
        <label>PPC Product Margin</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ParentContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Number of days before payment is due from the invoice date</description>
        <inlineHelpText>Time period in days from invoice date to payment due date</inlineHelpText>
        <label>Payment Terms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Commentary__c</fullName>
        <description>Details on how renewal progress</description>
        <inlineHelpText>N/A</inlineHelpText>
        <label>Renewal Commentary</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Date__c</fullName>
        <label>Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <description>Current Status of Renewal Contract</description>
        <inlineHelpText>Current Status of Renewal Contract</inlineHelpText>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Extension</fullName>
                </value>
                <value>
                    <fullName>Month to Month</fullName>
                </value>
                <value>
                    <fullName>Pending Signature</fullName>
                </value>
                <value>
                    <fullName>Contract Renewed</fullName>
                </value>
                <value>
                    <fullName>Renewal Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <description>Auto Renewal Term</description>
        <label>Renewal Term</label>
        
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Obligation_Description__c</fullName>
        <label>Reporting Obligation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Obligation__c</fullName>
        <label>Reporting Obligation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Share_Description__c</fullName>
        <label>Revenue Share Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Share__c</fullName>
        <label>Revenue Share</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Mgmt_Contract_Length__c</fullName>
        <label>Review Mgmt Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Mgmt_Fee_Per_Location__c</fullName>
        <label>Review Mgmt Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Review_Mgmt_of_Locations__c</fullName>
        <label>Review Mgmt # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Account_Fee_Per_Location__c</fullName>
        <label>Setup Account Fee Per Location</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Account_of_Locations__c</fullName>
        <label>Adversite Setup Account # of Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_for_Local_Website_per_page__c</fullName>
        <label>Setup Fee for Local Website per page</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Terms_Description__c</fullName>
        <label>Special Pricing Terms Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Terms__c</fullName>
        <label>Special Pricing Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_SLA__c</fullName>
        <label>Support SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier I</fullName>
                </value>
                <value>
                    <fullName>Tier II</fullName>
                </value>
                <value>
                    <fullName>Tier III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Notice__c</fullName>
        <description>How many days are required for a termination notice?</description>
        <inlineHelpText>How many days are required for a termination notice?</inlineHelpText>
        <label>Termination Notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tiered_Pricing__c</fullName>
        <label>Tiered Pricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Sponsorship_Description__c</fullName>
        <label>Trade Show Sponsorship Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Sponsorship__c</fullName>
        <label>Trade Show Sponsorship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yodle_Ads_PPC_Monthly_Budget_Location__c</fullName>
        <label>Yodle Ads (PPC) Monthly Budget/Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yodle_Ads_PPC_Setup_Fee_Location__c</fullName>
        <label>Yodle Ads (PPC) Setup Fee/Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yodle_Ads_PPC_of_Locations__c</fullName>
        <label>Yodle Ads (PPC) # of Locations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yodle_Web_Fee_Per_Location__c</fullName>
        <label>Yodle Web Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yodle_Web_of_Locations__c</fullName>
        <label>Yodle Web # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Renewal/Amendment</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corp_Acct_ID_in_YL__c</fullName>
        <description>Formula Field from Account Object (YBN Master Accounts) - Yodle Live Corporate Account ID</description>
        <formula>Account.Relationship_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Acct ID in YL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <description>Shows which division is fulfilling the product.</description>
        <label>Fulfillment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>WBN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Go_Live_Date__c</fullName>
        <description>THIS IS THE INITIAL START OF THE MONTHLY BILLING OF THE CONTRACT - CONTRACT LENGTH - Contract Start Date should match this on initial contracts.</description>
        <inlineHelpText>Initial Start of Monthly Billing for the contract.</inlineHelpText>
        <label>Initial Go Live Date</label>
        
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue_MRR__c</fullName>
        <description>Monthly revenue associated with contract.</description>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>0</scale>
        
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value_TCV__c</fullName>
        <label>Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>0</scale>
        
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>biz_dev_agreements</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Contract_Value__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Renewal_Notice_Date__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Biz_Dev_Agreement</value>
        </filters>
        <label>Biz Dev Agreements</label>
        <sharedTo>
            <role>PartnerManager</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Amendments</fullName>
        <active>true</active>
        <label>Amendments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Biz_Dev_Agreement</fullName>
        <active>true</active>
        <description>Business Development</description>
        <label>Biz Dev Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Agreement</fullName>
        <active>true</active>
        <description>.</description>
        <label>Service Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>WBN_Amendment</fullName>
        <active>true</active>
        <description>For any additional product that is purchased after Master Service Agreement is signed an amendment is created that sits as another product line item in the MSA.</description>
        <label>WBN Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>WBN_MSA</fullName>
        <active>true</active>
        <description>WBN (Web Brand Networks) Master Service Agreement shows information once the Contract record is created: Contract Information, Rev Details, Addtl Contract Details, Signature Information</description>
        <label>WBN MSA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_fields_for_Activating_Contract</fullName>
        <active>false</active>
        <description>Cannot activate contract/amendment unless all defined fields are filled in</description>
        <errorConditionFormula>AND(
OR( RecordType.Name = "WBN MSA",
RecordType.Name = "WBN Amendment"),
AND(ISCHANGED(Status),
ISPICKVAL(Status, "Activated")), 
OR(ISBLANK(TEXT(Fulfillment__c)), 
ISBLANK(Opportunity__c),
ISBLANK(Total_Contract_Value_TCV__c),
ISBLANK(Monthly_Recurring_Revenue_MRR__c), 
ISBLANK(TEXT(Revenue_Share__c)),
ISBLANK(TEXT(Special_Pricing_Terms__c)),
ISBLANK(TEXT(Early_Termination__c)),
ISBLANK(TEXT(Reporting_Obligation__c)),
ISBLANK(TEXT(Trade_Show_Sponsorship__c)),
ISBLANK(CustomerSignedId),
ISBLANK(CustomerSignedDate),
ISBLANK(CustomerSignedTitle),
ISBLANK(CompanySignedId),
ISBLANK(CompanySignedDate)))</errorConditionFormula>
        <errorMessage>All fields except from description ones MUST be filled in before activating an MSA Contract or Amendment.</errorMessage>
    </validationRules>
</CustomObject>